# Neural_Net_3

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Examples/NeuralNetSandbox/: CMakeLists.txt
Examples/NeuralNetSandbox/src/: main.cpp
Examples/Sandbox/: CMakeLists.txt
Examples/Sandbox/src/: main.cpp
core/: CMakeLists.txt
core/inc/: NeuralNet.h  NeuralNet_base.h  NeuralNet_global.h  NeuralNet_profiling.h
core/inc/base/: Activation.h  Connection.h  Genom.h  HiddenNeuron.h  InputNeuron.h  Net.h  NeuralNet_base.h  Neuron.h  OutputNeuron.h
core/inc/nets/: NeatNet.h
core/inc/utilities/: Json.h  NeuralNet_profiling.h  RandomEngine.h  Signal.h
core/src/: NeuralNet_profiling.cpp
core/src/base/: Activation.cpp  Connection.cpp  Genom.cpp  HiddenNeuron.cpp  InputNeuron.cpp  Net.cpp  Neuron.cpp  OutputNeuron.cpp
core/src/nets/: NeatNet.cpp
core/src/utilities/: Json.cpp  NeuralNet_profiling.cpp  RandomEngine.cpp
